// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`go to create page 1`] = `
Object {
  "Constructor": "_default",
  "Options": Object {
    "ID": "widget",
    "containerSelector": "body",
    "directives": Object {
      "EventListener": [Function],
      "disabled": [Function],
      "onclick": [Function],
      "oninput": [Function],
      "onload": [Function],
      "onresize": [Function],
      "onscroll": [Function],
      "onselect": [Function],
      "onsubmit": [Function],
      "ref": [Function],
    },
    "types": Array [],
  },
  "html": "
<div class=\\"project-list\\">
  <!--for-->
  <a href=\\"/\\" class=\\"project-card project-card-create\\">
    <div class=\\"create-icon\\"></div>
    <!--default-->
  </a>
  <!--LinkTo-->
</div>
",
}
`;

exports[`renders correctly 1`] = `
Object {
  "Constructor": "_default",
  "Options": Object {
    "ID": "widget",
    "containerSelector": "body",
    "directives": Object {
      "EventListener": [Function],
      "disabled": [Function],
      "onclick": [Function],
      "oninput": [Function],
      "onload": [Function],
      "onresize": [Function],
      "onscroll": [Function],
      "onselect": [Function],
      "onsubmit": [Function],
      "ref": [Function],
    },
    "types": Array [],
  },
  "html": "
<div class=\\"project-list\\">
  <!--for-->
  <a href=\\"/\\" class=\\"project-card project-card-create\\">
    <div class=\\"create-icon\\"></div>
    <!--default-->
  </a>
  <!--LinkTo-->
</div>
",
}
`;

exports[`renders list 1`] = `
Object {
  "Constructor": "_default",
  "Options": Object {
    "ID": "widget",
    "containerSelector": "body",
    "directives": Object {
      "EventListener": [Function],
      "disabled": [Function],
      "onclick": [Function],
      "oninput": [Function],
      "onload": [Function],
      "onresize": [Function],
      "onscroll": [Function],
      "onselect": [Function],
      "onsubmit": [Function],
      "ref": [Function],
    },
    "projects": Array [
      Object {
        "cwd": "/tmp/",
        "id": 1,
        "name": "Simple CI",
      },
      Object {
        "cwd": "/home/",
        "id": 1,
        "name": "ShamUI",
      },
    ],
    "types": Array [],
  },
  "html": "
<div class=\\"project-list\\">
  <a href=\\"undefined\\" class=\\"project-card\\"><span class=\\"name\\">Simple CI</span>
    <!--default-->
  </a>
  <!--LinkTo-->
  <a href=\\"undefined\\" class=\\"project-card\\"><span class=\\"name\\">ShamUI</span>
    <!--default-->
  </a>
  <!--LinkTo-->
  <!--for-->
  <a href=\\"/\\" class=\\"project-card project-card-create\\">
    <div class=\\"create-icon\\"></div>
    <!--default-->
  </a>
  <!--LinkTo-->
</div>
",
}
`;
